--- a/client/src/components/expeditions/Expeditions.css
+++ b/client/src/components/expeditions/Expeditions.css
@@ -122,7 +122,8 @@
 }
 
 .mid-exp-wrapper {
-  padding: 0em 5em;
+  /* padding: 0em 5em; */
+  padding-left: 4em;
   display: flex;
   flex-flow: row wrap;
   /* flex-direction: row; */
@@ -181,6 +182,8 @@
   width: 100%;
   height: 35em;
   background-color: rgb(103, 56, 93);
+  padding-top: 2em;
+  /* border: 2px solid orange; */
 }
 
 .purple-words {
