--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -123,9 +123,9 @@ h1 {
   display: flex;
   flex-direction: row;
   width: 100vw;
-  height: 4.5em;
+  height: 5.5em;
   background-color: white;
-  font-size: .9vw;
+  font-size: 1vw;
   align-items: center;
   margin-left: 0;
   padding-left: 2em;
@@ -180,7 +180,7 @@ h1 {
 
 .logo-image {
   margin: 1em 0em 1em 0em;
-  width: 15em;
+  width: 20em;
   
 }
 
