--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -31,6 +31,7 @@
     background-color: #3C7473;
     color: white;
     padding: 10px;
+    font-size: 40px;
   }
 
   .emp-btn-flex {
@@ -67,5 +68,9 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-
   }
+
+  .employee-edit-page {
+    padding: 10em 5em 5em 5em;
+  }
+
