added GenHu image to carousel

--- a/client/src/components/shared/Carousel.css
+++ b/client/src/components/shared/Carousel.css
@@ -7,11 +7,11 @@
 } */
 
 .hero-pic1 {
-  background-image: url('../../assets/carousel-pic2.jpg');
+  background-image: url('../../assets/Images/GenhuHeroImage.bmp');
   background-position: center;
   background-size: cover;
   width: 100vw;
-  height: 50vw;
+  height: 55vw;
   /* padding: 0em 1em; */
 }
 .hero-pic2 {
@@ -19,7 +19,7 @@
   background-position: center;
   background-size: cover;
   width: 100vw;
-  height: 50vw;
+  height: 55vw;
   /* padding: 0em 1em; */
 }
 .hero-pic3 {
@@ -27,7 +27,7 @@
   background-position: center;
   background-size: cover;
   width: 100vw;
-  height: 50vw;
+  height: 55vw;
   /* padding: 0em 1em; */
 }
 .hero-pic4 {
@@ -35,7 +35,7 @@
   background-position: center;
   background-size: cover;
   width: 100vw;
-  height: 50vw;
+  height: 55vw;
   /* padding: 0em 1em; */
 }
 
