--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -118,15 +118,75 @@ h1 {
 
 /* --------------- NAV ---------------- */
 .main-nav {
-  font-size: 17px;
+  display:-webkit-flex;
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 5.5em;
+  background-color: white;
+  font-size: 1vw;
+  align-items: center;
+  margin-left: 0;
+  padding-left: 2em;
+  position: fixed;
+  z-index: 10000;
+  box-shadow: 0px 8px 16px 0px rgba(214, 213, 213, 0.2);
+} 
+
+.nav-home {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 50%;
 }
 
 .right_nav {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  flex-wrap: wrap;
-  margin: 0px 5px;
+  width: 50%;
+  margin-right: 3%;
+}
+
+.nav-item {
+  padding: 2em 1.2em;
+  color: black;
+  position: relative; 
+  display: inline-block;
+  text-decoration: none;
+}
+
+.nav-item:hover {
+  color:black;
+  text-decoration: none;
+}
+
+.nav-item:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 20px;
+  content: "";
+  display: block;
+  height: .2vh;
+  position: absolute;
+  background: teal;
+  width: 0;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+}
+.nav-item:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+.logo-image {
+  margin: 1em 0em 1em 0em;
+  width: 20em;
+  
+}
+
+.facebook-image {
+  width: 2em;
+  margin: 2em 0em 0em 0em;
+
 }
 
 .dropdown {
@@ -141,7 +201,8 @@ h1 {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 5000;
-  font-size: 15px;
+  font-size: 0.8vw;
+  padding: 10px;
 }
 
 .dropdown-content a {
@@ -149,6 +210,7 @@ h1 {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+
 }
 
 .dropdown-content a:hover {
@@ -158,26 +220,6 @@ h1 {
 
 .dropdown:hover .dropdown-content {
   display: block;
-}
-.nav-item {
-  color: black;
-  padding-right: 10px;
-  margin-bottom: 10px;
-}
-
-.nav-item:hover {
-  color: teal;
-  text-decoration: none;
-}
-
-.facebook-image {
-  width: 2em;
-  padding-top: .3em;
-}
-
-.logo-image {
-  width: 23em;
-  padding-bottom: 20px;
 }
 
 .homes-tab {
@@ -192,125 +234,4 @@ li {
     height: 100vh;
     padding-bottom: 50em;
   }
-
-@media screen and (min-width:1274px) {
-  .main-nav {
-    display:-webkit-flex;
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-    height: 5.5em;
-    background-color: white;
-    font-size: 20px;
-    align-items: center;
-    margin-left: 0;
-    padding-left: 2em;
-    position: fixed;
-    z-index: 10000;
-    box-shadow: 0px 8px 16px 0px rgba(214, 213, 213, 0.2);
-    text-align: center;
-  } 
-  
-  .nav-home {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    width: 50%;
-  }
-  
-  .right_nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 50%;
-    flex-wrap: nowrap;
-    margin-right: 3%;
-  }
-  
-  .nav-item {
-    padding: 2em 1.2em;
-    color: black;
-    position: relative; 
-    display: inline-block;
-    text-decoration: none;
-  }
-  
-  .nav-item:hover {
-    color:black;
-    text-decoration: none;
-  }
-  
-  .nav-item:after {    
-    background: none repeat scroll 0 0 transparent;
-    bottom: 20px;
-    content: "";
-    display: block;
-    height: .2vh;
-    position: absolute;
-    background: teal;
-    width: 0;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  }
-  .nav-item:hover:after { 
-    width: 100%; 
-    left: 0; 
-  }
-  
-  .logo-image {
-    margin: 30px 0em 1em 0em;
-    width: 20em;
-    
-  }
-  
-  .facebook-image {
-    /* width: 60px;
-    margin: 45px 0px 0px 0px; */
-    
-  
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 5000;
-    font-size: 0.8vw;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    color: teal;
-    text-decoration: none;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .homes-tab {
-    padding-left: 2em;
-  }
-  
-  li {
-    cursor: pointer;
-    }
-  
-    .souls-container {
-      height: 100vh;
-      padding-bottom: 50em;
-    }
-}
 
