--- a/client/src/components/shared/landing-mobile/landing-stats-mob/LandingStatsMob.css
+++ b/client/src/components/shared/landing-mobile/landing-stats-mob/LandingStatsMob.css
@@ -16,7 +16,7 @@
   width: 18%;
   margin: auto;
   margin-top: 1%;
-  margin-bottom: 1%;
+  margin-bottom: 1em;
 }
 
 .stats-container-mob {
@@ -26,7 +26,8 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: 0em 1em 1em;
+  padding-top: .5em;
+  padding: 0em .5em .5em;
   text-shadow: 2px 2px black;
   /* border: 1px solid red; */
 }
@@ -34,7 +35,7 @@
 .la-single-stat-mob {
   color: white;
   text-align: center;
-  width: 50%;
+  width: 100%;
   height: 100%;
   padding-top: .5em;
   padding-bottom: .5em;
@@ -47,7 +48,7 @@
 }
 
 .stat-value-mob {
-  font-size: 63px;
+  font-size: 40px;
   line-height: 1.2;
 }
 .statsHeader-mob {
