--- a/client/src/components/shared/landing-mobile/footer-mob/FooterMob.css
+++ b/client/src/components/shared/landing-mobile/footer-mob/FooterMob.css
@@ -3,35 +3,35 @@
 .footer-container-mob{
   margin: 0 auto;
   width: 100vw;
-  padding: 4em;
+  padding: 2em;
   box-shadow: 0px 0px 20px 0px rgba(214, 213, 213, 0.3);
-  border: 2px solid red
+  /* border: 2px solid red */
 }
 
 
-.column {
+.column-mob {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 1em;
-  margin-bottom: 2em;
+  /* margin-bottom: 2em; */
   /* border: 2px solid red; */
   /* outline: solid;
   outline-color: red; */
 }
 
-.row:after {
+.row-mob:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.mission {
+.mission-mob {
   align-content: center;
   font-size: small;
 }
 
-.header {
+.header-mob {
   font-size: small;
   color: #3C7473;
   font-weight: bold;
@@ -50,10 +50,10 @@
   margin-bottom: 6px;
 }
 
-.NavLink {
+.NavLink-mob {
   color: black;
 }
-.NavLink:hover {
+.NavLink-mob:hover {
   color: #5B5B5B;
   text-decoration: none;
 }
