--- a/client/src/components/shared/landing-mobile/proven-souls-mob/ProvenSoulsMob.css
+++ b/client/src/components/shared/landing-mobile/proven-souls-mob/ProvenSoulsMob.css
@@ -9,9 +9,8 @@
 
 
 .ps-container-mob {
-  width: 65%;
-  margin: 4em 5em;
-  margin-left: 6em;
+  width: 100%;
+  margin-top: 1.5em;
   font-weight: none;
   /* border: 1px red solid; */
 }
@@ -19,8 +18,9 @@
 .ps-title-mob {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
-  font-size: 2.5em;
-  margin-bottom: 1em;
+  font-size: 2.9em;
+  margin-bottom: .5em;
+  padding-left: .6em;
   /* flex-shrink: -1; */
 }
 .ps-para-mob {
@@ -29,11 +29,14 @@
   line-height: 2em;
   font-size: 1.25em;
   margin-bottom: .50em;
+  padding-left: .6em;
   }
 
 .btn-div-mob {
   display: flex;
   justify-content: center;
+  /* border: 2px solid red; */
+  width: 100%;
 }
 
 .proven-button-mob {
@@ -50,9 +53,9 @@
   /* margin: 0 auto; */
  margin-top: 1em;
   /* padding: 0.5em 1em; */
-  width: 23rem;
+  width: 75%;
   transition: 0.5s all ease-out;
-  padding: .75em 1.25em;
+  padding: .65em 1.25em;
   margin-right: .75em;
   margin-bottom: 1em;
 }
