--- a/client/src/components/shared/landing-mobile/three-stages-mob/ThreeStagesMob.css
+++ b/client/src/components/shared/landing-mobile/three-stages-mob/ThreeStagesMob.css
@@ -1,8 +1,8 @@
-.ts-top-container {
+.ts-top-container-mob {
   height: 100%;
   padding: 0;
 }
-.ts-top-bg {
+.ts-top-bg-mob {
   width: 100%;
   height: 100%;
   display: grid;
@@ -10,7 +10,7 @@
   color: white;
   position: relative;
 }
-.ts-top-bg::before {
+.ts-top-bg-mob::before {
   content: "";
   top: 0;
   left: 0;
@@ -22,17 +22,17 @@
   filter: grayscale(100%);
 }
 
-.ts-button a {
+.ts-button-mob a {
   color: white;
 }
 
-.ts-content-wrapper {
+.ts-content-wrapper-mob {
   width: 100%;
   /* height: 50%; */
   position: relative;
 }
 
-.ts-heading {
+.ts-heading-mob {
   display: flex;
   justify-content: center;
   font-size: 3em;
@@ -40,7 +40,7 @@
   padding: .75em;
 }
 
-.ts {
+.ts-mob {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -48,9 +48,9 @@
 }
 
 
-.content {
-  height: 38em;
-  width: 28em;
+.content-mob {
+  height: 30em;
+  width: 22em;
   padding: 0 25px;
   display: flex;
   flex-direction: column;
@@ -59,33 +59,33 @@
   border: 1px solid black;
 }
 
-.content h3 {
+.content-mob h3 {
   font-size: 2.5em;
 }
 
-.content h4 {
+.content-mob h4 {
   font-size: 1.5em;
 }
 
-.hr {
+.hr-mob {
   border: .5px white solid;
   width: 20em;
   margin-bottom: 2em;
 }
 
-.title {
+.title-mob {
   font-weight: bold;
   margin-bottom: 6px;
   font-size: 22px;
   color: #4a4a4a;
 }
 
-.subtitle {
+.subtitle-mob {
   font-weight: lighter;
   font-size: 16px;
 }
 
-.ts-background-image {
+.ts-background-image-mob {
   background-image: url('../../../../assets/carousel-pic3.jpg');
   background-position: center;
   background-size: cover;
@@ -93,18 +93,18 @@
 
 }
 
-.ts-background-image:hover {
+.ts-background-image-mob:hover {
   transform: scale(1.01);
   transition: transform 1s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 
 }
 
 
-.ts-color-opacity {
+.ts-color-opacity-mob {
   background-color: rgba(46, 89, 88, 0.6);
 }
 
-.ts-background-image2 {
+.ts-background-image2-mob {
   background-image: url('../../../../assets/carousel-pic1.jpg');
   background-position: center;
   background-size: cover;
@@ -112,35 +112,35 @@
 
 }
 
-.ts-background-image2:hover {
+.ts-background-image2-mob:hover {
   transform: scale(1.02);
     transition: transform 1s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 
 }
 
-.ts-color-opacity2 {
+.ts-color-opacity2-mob {
   background-color: rgba(162, 90, 81, 0.6);
 }
 
-.ts-background-image3 {
+.ts-background-image3-mob {
   background-image: url('../../../../assets/carousel-pic4.jpg');
   background-position: center;
   background-size: cover;
   margin-bottom: 1em;
 
 }
-.ts-background-image3:hover {
+.ts-background-image3-mob:hover {
   transform: scale(1.02);
   transition: transform 1s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 
 }
 
-.ts-color-opacity3 {
+.ts-color-opacity3-mob {
   background-color: rgba(122, 85, 116, 0.6);
 }
 
 
-.ts-long-box {
+.ts-long-box-mob {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -149,23 +149,24 @@
   height: 23em;
   margin: 3em;
   align-content: center;
+  text-align: center;
   background-color: #D5C54A;
 }
 
-.ts-flex {
+.ts-flex-mob {
   /* border: red 2px solid; */
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.ts-flex h2 {
+.ts-flex-mob h2 {
   margin: 0 auto;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 
-.ts-button {
+.ts-button-mob {
 
   cursor: pointer;
   background: #D5C54A;
@@ -186,29 +187,29 @@
 
 }
 
-.ts-button a {
+.ts-button-mob a {
   color: white;
 }
 
-.ts-button:hover a {
+.ts-button-mob:hover a {
   color: black;
 }
 
-.ts-btn-row {
+.ts-btn-row-mob {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.ts-button:hover {
+.ts-button-mob:hover {
   background: white;
   color: black;
 }
 
-.NavLink {
+.NavLink-mob {
   color: white;
 }
 
-.NavLink:hover {
+.NavLink-mob:hover {
   color: white;
 }
