--- a/client/src/components/shared/landing-mobile/about-mob/AboutMob.css
+++ b/client/src/components/shared/landing-mobile/about-mob/AboutMob.css
@@ -41,6 +41,7 @@
 .about-title-mob {
   font-family: 'Oxygen', sans-serif;
   font-size: 2.7em;
+  font-weight: bold;
   padding-top: 1em;
   padding-bottom: 1em;
   /* padding-left: .8em; */
