--- a/client/src/components/shared/landing-mobile/proven-souls-mob/ProvenSoulsMob.css
+++ b/client/src/components/shared/landing-mobile/proven-souls-mob/ProvenSoulsMob.css
@@ -53,10 +53,10 @@
   /* margin: 0 auto; */
  margin-top: 1em;
   /* padding: 0.5em 1em; */
-  width: 75%;
+  width: 60%;
   transition: 0.5s all ease-out;
   padding: .65em 1.25em;
-  margin-right: .75em;
+  /* margin-right: .75em; */
   margin-bottom: 1em;
 }
 .proven-button-mob:hover {
