--- a/client/src/components/expeditions/mobile/ExpeditionsMob.css
+++ b/client/src/components/expeditions/mobile/ExpeditionsMob.css
@@ -1,26 +1,34 @@
 
                      /*  HERO */
-.hero-exp-container {
-  height: 75vh;
+
+    * {
+      padding: 0;
+      margin: 0;
+                      
+    }
+.hero-exp-container-mob {
+  height: 80vh;
   padding: 0;
 }
 
-.hero-exp-bg {
+.hero-exp-bg-mob {
   width: 100%;
-  height: 100%;
-  display: grid;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
   place-items: center;
   color: white;
   position: relative;
+  border: red 2px solid;
 }
-.hero-exp-bg::before {
+.hero-exp-bg-mob::before {
   content: "";
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   position: absolute;
-  background: url('../../assets/expeditionAssets/exp-pic.jpg');
+  background: url('../../../assets/expeditionAssets/exp-pic.jpg');
   background-size: cover;
   background-size: cover;
   opacity: 0.7;
@@ -28,11 +36,10 @@
 }
 
 
-.exp-content-wrapper {
-  width: 80%;
-  /* height: 50%; */
+.exp-content-wrapper-mob {
+  width: 100%;
   position: relative;
-  /* border: 2px red solid; */
+  border: 2px green solid;
 }
 
 /* .ts-heading {
@@ -43,82 +50,73 @@
   padding: .75em;
 } */
 
-.exp {
+.exp-mob {
   width: 100%;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-around;
   /* border: 2px blue solid; */
 }
 
 
-.exp-content {
+.exp-content-mob {
   height: 25em;
   /* height: em; */
-  width: 35em;
+  width: 100%;
   padding: 10px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* border: 1px solid black; */
+  border: 1px solid black;
   /* border: 2px green solid; */
 
 }
 
-.exp-content h1 {
+.exp-content-mob h1 {
   font-size: 3.5em;
   text-shadow: 1px 1px black;
 }
 
-.exp-content p {
+.exp-content-mob p {
   /* display: inline-block; */
   padding: 1.7em;
   font-size: 1.1em;
   line-height: 1.7em;
 }
 
-.title {
+.title-mob {
   font-weight: bold;
   margin-bottom: 6px;
   font-size: 22px;
   color: #4a4a4a;
 }
 
-.subtitle {
+.subtitle-mob {
   font-weight: lighter;
   font-size: 16px;
 }
 
 
-.exp-background-image2 {
+.exp-background-image2-mob-mob {
   background-color: #3C7473;
   background-position: center;
   background-size: cover;
   display: inline-block;
 }
 
-
-
-/* ----------- Hero Resonsive Middle ----------- */
-
-@media (max-width: 125px) {
-
-
-
-}
-
                   /* ----------------MID -----------------*/
 
-.mid-exp-container {
+.mid-exp-container-mob {
   display: flex;
   flex-direction: column;
   height: 85em;
   margin-top: 2em;
+  border: purple 2px solid;
   /* position: relative; */
 }
 
-.mid-exp-content {
+.mid-exp-content-mob {
   /* flex-basis: 1; */
   padding: 7em 3em;
   width: 50%;
@@ -131,18 +129,18 @@
   
 }
 
-.mid-exp-wrapper {
+.mid-exp-wrapper-mob {
   /* padding: 0em 5em; */
   padding-left: 4em;
   display: flex;
   flex-flow: row wrap;
   /* flex-direction: row; */
   /* flex: 1; */
-  /* border: 2px solid aqua; */
+  border: 2px solid aqua;
 }
 
-.exp-background-img {
-  background-image: url('../../assets/expeditionAssets/exp-horse.jpg');
+.exp-background-img-mob {
+  background-image: url('../../../assets/expeditionAssets/exp-horse.jpg');
   background-position: center;
   background-size: cover;
   /* padding: 0em .5em; */
@@ -153,14 +151,14 @@
   
 }
 
-.ex-color-opacity {
+.ex-color-opacity-mob {
   background-color: rgba(161, 146, 59, 0.4);
   width: 100%;
   height: 100%;
 }
-.exp-background-img2 {
+.exp-background-img2-mob {
   height: 90%;
-  background-image: url('../../assets/expeditionAssets/exp-girls.jpg');
+  background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
   background-position: center;
   background-size: cover;
   /* padding: 2em 3em; */
@@ -170,23 +168,23 @@
 
 }
 
-.ex-color-opacity2 {
+.ex-color-opacity2-mob {
   background-color: rgba(162, 90, 81, 0.4);
   width: 100%;
   height: 100%;
 }
 
-.mid-exp-container h1 {
+.mid-exp-container-mob h1 {
   font-size: 3em;
 }
-.mid-exp-container p {
+.mid-exp-container-mob p {
   font-size: 1.25em;
   line-height: 1.5;
 }
 
               /* --------PURPLE CONTAINER ------------ */
 
-.purple-container {
+.purple-container-mob {
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -196,7 +194,7 @@
   /* border: 2px solid orange; */
 }
 
-.purple-words {
+.purple-words-mob {
   display: flex;
   flex: wrap;
   flex-direction: column;
@@ -207,16 +205,16 @@
   margin-left: 5em;
 }
 
-.purple-words h1 {
+.purple-words-mob h1 {
   
   font-size: 2.5em;
 }
-.purple-words p {
+.purple-words-mob p {
   
   font-size: 1.15em;
 }
 
-.purple-pics-wrapper {
+.purple-pics-wrapper-mob {
   margin-right: 5em;
   justify-content: flex-end;
   flex-direction: row;
@@ -226,64 +224,64 @@
   padding-top: 1.7em;
 }
 
-.purp-img-flex {
+.purp-img-flex-mob {
   /* border: 1px green solid; */
   display: flex;
   width: 50%;
   justify-content: space-evenly;
 }
 
-.purple-img1 {
+.purple-img1-mob {
   justify-content: center;
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/expeditionAssets/exp-girls.jpg');
+  background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
   height: 80%;
   
 }
-.purple-img2 {
+.purple-img2-mob {
   justify-content: center;
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/expeditionAssets/exp-family.jpg');
+  background-image: url('../../../assets/expeditionAssets/exp-family.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
   height: 80%;
   /* margin-top: 2em; */
 }
-.purple-img3 {
+.purple-img3-mob {
   justify-content: space-around;
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/carousel-pic2.jpg');
+  background-image: url('../../../assets/carousel-pic2.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
   height: 80%;
 }
-.purple-img4 {
+.purple-img4-mob {
   
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/expeditionAssets/exp-pic.jpg');
+  background-image: url('../../../assets/expeditionAssets/exp-pic.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
   height: 80%;
 }
-.purple-img5 {
+.purple-img5-mob {
   justify-content: space-around;
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/carousel-pic4.jpg');
+  background-image: url('../../../assets/carousel-pic4.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
   height: 80%;
 }
-.purple-img6 {
+.purple-img6-mob {
   justify-content: space-around;
   /* border: 2px yellow solid; */
-  background-image: url('../../assets/Images/city-buildings.jpg');
+  background-image: url('../../../assets/Images/city-buildings.jpg');
   background-position: center;
   background-size: cover;
   width: 16em;
