--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -26,6 +26,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  padding-top: 50px;
   /* padding: 100px 200px 150px 200px; */
 
 }
@@ -122,9 +123,9 @@ h1 {
   display: flex;
   flex-direction: row;
   width: 100vw;
-  height: 5.5em;
+
   background-color: white;
-  font-size: 1vw;
+  font-size: 20px;
   align-items: center;
   margin-left: 0;
   padding-left: 2em;
@@ -137,34 +138,35 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  width: 50%;
 
 }
 
 .right_nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  width: 50%;
+  align-items: center;
   margin-right: 3%;
+  width: 100vw;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .nav-item {
-  padding: 2em 1.2em;
+  padding: .5em 1.2em;
   color: black;
   position: relative; 
   display: inline-block;
   text-decoration: none;
-}
+} 
 
 .nav-item:hover {
-  color:black;
+  color:teal;
   text-decoration: none;
 }
 
-.nav-item:after {    
+/* .nav-item:after {    
   background: none repeat scroll 0 0 transparent;
-  bottom: 20px;
+  bottom: -10px;
   content: "";
   display: block;
   height: .2vh;
@@ -172,22 +174,18 @@ h1 {
   background: teal;
   width: 0;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
-}
-.nav-item:hover:after { 
+} */
+/* .nav-item:hover:after { 
   width: 100%; 
   left: 0; 
-}
+} */
 
 .logo-image {
-  margin: 1em 0em 1em 0em;
-  width: 20em;
-  
+  width: 0;
 }
 
 .facebook-image {
   width: 2em;
-  margin: 2em 0em 0em 0em;
-
 }
 
 .dropdown {
@@ -202,8 +200,9 @@ h1 {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 5000;
-  font-size: 0.8vw;
+  font-size: 18px;
   padding: 10px;
+  margin-top: 10px;
 }
 
 .dropdown-content a {
@@ -236,3 +235,127 @@ li {
     padding-bottom: 50em;
   }
 
+@media screen and (min-width:1510px) {
+.hide-me {
+  display: none;
+}
+
+.main-nav {
+  display:-webkit-flex;
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 5.5em;
+  background-color: white;
+  font-size: 25px;
+  align-items: center;
+  margin-left: 0;
+  padding-left: 2em;
+  position: fixed;
+  z-index: 10000;
+  box-shadow: 0px 8px 16px 0px rgba(214, 213, 213, 0.2);
+} 
+
+.nav-home {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+}
+
+.right_nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 3%;
+  width: 100vw;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+
+.nav-item {
+  padding: 0em 1.2em;
+  color: black;
+  position: relative; 
+  display: inline-block;
+  text-decoration: none;
+}
+
+.nav-item:hover {
+  color:black;
+  text-decoration: none;
+}
+
+.nav-item:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: -10px;
+  content: "";
+  display: block;
+  height: .2vh;
+  position: absolute;
+  background: teal;
+  width: 0;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+}
+.nav-item:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+.logo-image {
+  margin: 1em 0em 1em 0em;
+  width: 600px;
+}
+
+.facebook-image {
+  width: 2em;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 5000;
+  font-size: 22px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+
+}
+
+.dropdown-content a:hover {
+  color: teal;
+  text-decoration: none;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.homes-tab {
+  padding-left: 2em;
+}
+
+li {
+  cursor: pointer;
+  }
+
+  .souls-container {
+    height: 100vh;
+    padding-bottom: 50em;
+  }
+
+}
