--- a/client/src/components/expeditions/mobile/ExpeditionsMob.css
+++ b/client/src/components/expeditions/mobile/ExpeditionsMob.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
+@font-face {
+  src: url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
+  /* TITle */
+  font-family: 'Oxygen', sans-serif;
+  /* Text */
+  font-family: 'Raleway', sans-serif;
+}
 
                      /*  HERO */
 
@@ -7,19 +15,19 @@
                       
     }
 .hero-exp-container-mob {
-  height: 80vh;
+  height: 100vh;
   padding: 0;
 }
 
 .hero-exp-bg-mob {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   place-items: center;
   color: white;
   position: relative;
-  border: red 2px solid;
+  /* border: red 2px solid; */
 }
 .hero-exp-bg-mob::before {
   content: "";
@@ -39,7 +47,7 @@
 .exp-content-wrapper-mob {
   width: 100%;
   position: relative;
-  border: 2px green solid;
+  /* border: 2px green solid; */
 }
 
 /* .ts-heading {
@@ -58,51 +66,69 @@
   /* border: 2px blue solid; */
 }
 
-
 .exp-content-mob {
-  height: 25em;
+  height: 50vh;
   /* height: em; */
   width: 100%;
   padding: 10px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
-  border: 1px solid black;
+  /* border: 2px solid black; */
+  /* border: 2px green solid; */
+
+}
+.exp-content-mob-color {
+  height: 50vh;
+  /* height: em; */
+  width: 100%;
+  padding: 5px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  /* border: 2px solid black; */
   /* border: 2px green solid; */
 
 }
 
+
 .exp-content-mob h1 {
-  font-size: 3.5em;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 2.5em;
   text-shadow: 1px 1px black;
 }
 
 .exp-content-mob p {
   /* display: inline-block; */
-  padding: 1.7em;
-  font-size: 1.1em;
+  /* padding: 2em; */
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.5em;
   line-height: 1.7em;
 }
-
+/* 
 .title-mob {
   font-weight: bold;
   margin-bottom: 6px;
   font-size: 22px;
   color: #4a4a4a;
-}
+} */
 
-.subtitle-mob {
+/* .subtitle-mob {
   font-weight: lighter;
   font-size: 16px;
-}
+} */
 
 
-.exp-background-image2-mob-mob {
+.exp-background-image2-mob {
   background-color: #3C7473;
   background-position: center;
   background-size: cover;
   display: inline-block;
+  opacity: 0.7;
 }
 
                   /* ----------------MID -----------------*/
@@ -110,19 +136,33 @@
 .mid-exp-container-mob {
   display: flex;
   flex-direction: column;
-  height: 85em;
-  margin-top: 2em;
-  border: purple 2px solid;
+  height: 100%;
+  /* margin-top: 2em; */
+  /* border: purple 2px solid; */
   /* position: relative; */
 }
 
 .mid-exp-content-mob {
   /* flex-basis: 1; */
-  padding: 7em 3em;
-  width: 50%;
+  /* padding: 7em 3em; */
+  width: 100%;
+  padding: 1.5em;
   /* border: 2px solid red; */
   
 }
+.line-mob {
+  background-color: #3C7473;
+  width: 75%;
+  height: .5em;
+  margin: .5em auto;
+  border-radius: 5px;
+}
+
+.line-center-exp {
+  height: 20px;
+}
+
+
 .mid-exp-content-photo {
   /* flex-basis: 1; */
   
@@ -131,12 +171,12 @@
 
 .mid-exp-wrapper-mob {
   /* padding: 0em 5em; */
-  padding-left: 4em;
+  /* padding-left: 4em; */
   display: flex;
   flex-flow: row wrap;
   /* flex-direction: row; */
   /* flex: 1; */
-  border: 2px solid aqua;
+  /* border: 2px solid aqua; */
 }
 
 .exp-background-img-mob {
@@ -144,8 +184,8 @@
   background-position: center;
   background-size: cover;
   /* padding: 0em .5em; */
-  width: 50%;
-  height: 90%;
+  width: 100%;
+  height: 30em;
   /* margin: 0px 5px; */
   /* border: 2px solid red; */
   
@@ -157,13 +197,13 @@
   height: 100%;
 }
 .exp-background-img2-mob {
-  height: 90%;
+  height: 30em;
   background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
   background-position: center;
   background-size: cover;
   /* padding: 2em 3em; */
   /* margin: 2em 3em; */
-  width: 50%;
+  width: 100%;
   /* border: 2px solid red; */
 
 }
@@ -175,43 +215,49 @@
 }
 
 .mid-exp-container-mob h1 {
-  font-size: 3em;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 1.75em;
+  padding-bottom: .25em;
+  text-align: center;
 }
 .mid-exp-container-mob p {
-  font-size: 1.25em;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1em;
   line-height: 1.5;
+  /* text-align: justify; */
 }
 
               /* --------PURPLE CONTAINER ------------ */
 
 .purple-container-mob {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  /* justify-content: space-around; */
   width: 100%;
-  height: 35em;
+  height: 90em;
   background-color: rgb(103, 56, 93);
-  padding-top: 2em;
   /* border: 2px solid orange; */
 }
 
 .purple-words-mob {
   display: flex;
-  flex: wrap;
+  /* flex: wrap; */
   flex-direction: column;
   justify-content: center;
   color: white;
   /* border: 1px green solid; */
-  width: 60%;
-  margin-left: 5em;
+  width: 100%;
+  height: 40vh;
+  padding: 0em 1em;
+  text-align: center;
 }
 
-.purple-words-mob h1 {
-  
+.purple-words-mob h1 { 
+  font-family: 'Oxygen', sans-serif;
   font-size: 2.5em;
 }
 .purple-words-mob p {
-  
-  font-size: 1.15em;
+  font-size: 1.30em;
 }
 
 .purple-pics-wrapper-mob {
@@ -220,15 +266,16 @@
   flex-direction: row;
   display: flex;
   flex-flow: row wrap;
-  width: 40%;
+  width: 100%;
+  height: 50vh;
   padding-top: 1.7em;
 }
 
 .purp-img-flex-mob {
-  /* border: 1px green solid; */
+  /* border: 1px yellow solid; */
   display: flex;
-  width: 50%;
-  justify-content: space-evenly;
+  flex-direction: column;
+  width: 100%;
 }
 
 .purple-img1-mob {
@@ -237,9 +284,9 @@
   background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
-  
+  width: 100%;
+  height: 15em;
+  margin: 1em 1em;
 }
 .purple-img2-mob {
   justify-content: center;
@@ -247,9 +294,9 @@
   background-image: url('../../../assets/expeditionAssets/exp-family.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
-  /* margin-top: 2em; */
+  width: 90%;
+  height: 15em;
+  margin: 1em 1em;
 }
 .purple-img3-mob {
   justify-content: space-around;
@@ -257,8 +304,9 @@
   background-image: url('../../../assets/carousel-pic2.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
+  width: 90%;
+  height: 15em;
+  margin: 1em 1em;
 }
 .purple-img4-mob {
   
@@ -266,8 +314,9 @@
   background-image: url('../../../assets/expeditionAssets/exp-pic.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
+  width: 90%;
+  height: 15em;
+  margin: 1em 1em;
 }
 .purple-img5-mob {
   justify-content: space-around;
@@ -275,8 +324,9 @@
   background-image: url('../../../assets/carousel-pic4.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
+  width: 90%;
+  height: 15em;
+  margin: 1em 1em;
 }
 .purple-img6-mob {
   justify-content: space-around;
@@ -284,6 +334,7 @@
   background-image: url('../../../assets/Images/city-buildings.jpg');
   background-position: center;
   background-size: cover;
-  width: 16em;
-  height: 80%;
+  width: 100%;
+  height: 15em;
+  margin: 1em 1em;
 }
