--- a/client/src/components/shared/landing-mobile/about-mob/AboutMob.css
+++ b/client/src/components/shared/landing-mobile/about-mob/AboutMob.css
@@ -74,9 +74,10 @@
 .mission-paragraph-mob {
   font-family: 'Raleway', sans-serif;
   /* padding-top: .3em; */
-  padding: .6em .75em;
+  padding: .6em 2em;
   font-size: 1.25em;
   line-height: 2;
+  /* border: 2px red solid; */
   
 }
 
@@ -85,7 +86,7 @@
 .convert-container-mob {
   display: flex;  
   flex-direction: column;
-  height: 107vh;
+  height: 115vh;
   margin-top: 1em;
   /* border: 2px solid purple; */
 }
