--- a/client/src/components/about/AboutUs.css
+++ b/client/src/components/about/AboutUs.css
@@ -7,8 +7,8 @@
 .aboutUs-container{
   padding: 5px;
   margin-top: 0px;
-  margin-left: 190px;
-  margin-right: 190px;
+  margin-left: 10vw;
+  margin-right: 10vw;
   line-height: 2.5;
 }
 
@@ -28,9 +28,7 @@
 }
 
 .au-container-top {
-  
   border-bottom: 1px solid black;
-  margin-top: 90px;
+  margin-top: 15vh;
   margin-bottom: 25px;
-
 }
