--- a/client/src/components/orphanages/ShowOrphanages.css
+++ b/client/src/components/orphanages/ShowOrphanages.css
@@ -6,3 +6,15 @@
   /* filter: brightness(50%); */
   width: 50%;
 }
+
+
+@media (max-width: 1024px) {
+  .orphanage-img {
+    background-image: url('../../assets/Images/homes2.jpg');
+    background-position: center;
+    background-size: cover;
+    /* opacity: 0.7; */
+    /* filter: brightness(50%); */
+    width: 100%;
+  }
+}
