--- a/client/src/components/shared/AboutLanding.css
+++ b/client/src/components/shared/AboutLanding.css
@@ -1,6 +1,6 @@
 .about-container {
   display: flex;
-  padding-top: 2em;
+  padding-top: 0em;
 }
 
 .about-logo {
@@ -116,4 +116,27 @@
   background-size: cover;
   width: 100%;
   height: 100%;
+}
+
+/* ----------   iPad size   ----------- */
+
+@media (max-width: 1024px) {
+  .about-logo {
+    padding-top: 4em;
+  }
+
+  .convert-container {
+    display: flex;  
+    height: 37vh;
+    padding-left: 6em;
+  }
+  .carousel-container {
+    width: 85%;
+    height: 100%;
+    padding-top: 7em;
+    padding-right: 4em;
+    padding-left: 3em;
+    padding-bottom: 1em;
+    /* border: 2px solid #ddd; */
+   }
 }
