--- a/client/src/components/shared/LandingStats.css
+++ b/client/src/components/shared/LandingStats.css
@@ -53,3 +53,16 @@
   color: white;
   padding-top: 2rem;
 }
+
+@media (max-width: 1024px) {
+  .stats-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 0em 1em 2em;
+    text-shadow: 2px 2px black;
+  }
+}
