--- a/client/src/components/shared/Proven-souls.css
+++ b/client/src/components/shared/Proven-souls.css
@@ -9,9 +9,9 @@
 
 
 .ps-container {
-  width: 65%;
-  margin: 4em 5em;
-  margin-left: 6em;
+  width: 100%;
+  /* margin: 4em 5em; */
+  /* margin-left: 6em; */
   font-weight: none;
   /* border: 1px red solid; */
 }
@@ -20,15 +20,35 @@
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
   font-size: 3.5em;
-  margin-bottom: 1em;
+  margin-top: 1em;
+  margin-bottom: .75em;
+  text-align: center;
   /* flex-shrink: -1; */
 }
+
+.ps-para-cont {
+  /* border: 1px red solid; */
+  /* width:  */
+  /* width:  */
+  padding-bottom: .2em;
+
+}
+
 .ps-para {
   
   font-family: 'Raleway', sans-serif;
   line-height: 2em;
   font-size: 1.25em;
   margin-bottom: .50em;
+  width: 70%;
+  margin: 0 auto;
+  text-align:  center;
+  }
+
+  .ps-btn-cont {
+    /* border: 2px solid red; */
+    text-align: center;
+
   }
 
 .proven-button {
@@ -41,7 +61,6 @@
   color: white;
   font-size: 1.75em;
   
-  /* border: 2px solid white; */
   margin: 0 auto;
  margin-top: 1em;
   /* padding: 0.5em 1em; */
@@ -49,7 +68,8 @@
   transition: 0.5s all ease-out;
   padding: .75em 1.25em;
   margin-left: 0 auto;
-  margin-bottom: 1em;
+  margin-bottom: 2.5em;
+  text-align: center;
 }
 .proven-button:hover {
   opacity: 0.8;
@@ -61,3 +81,8 @@
   text-decoration: none;
 }
 
+@media (max-width: 1024px) {
+  .proven-button {
+    margin-bottom: 1.5em;
+  }
+}
