--- a/client/src/components/policyandfinancial/PolicyFinancial.css
+++ b/client/src/components/policyandfinancial/PolicyFinancial.css
@@ -1,6 +1,6 @@
 
 .policy-container{
-  padding: 20px;
+  padding: 100px 20px 20px 20px;
   margin-top: 0px;
   margin-left: 190px;
   margin-right: 190px;
