--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -23,12 +23,9 @@ h1 {
 .contact {
   display:-webkit-flex;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  padding-top: 50px;
-  /* padding: 100px 200px 150px 200px; */
-
+  padding-top: 150px;
 }
 
 .contact_left {
@@ -37,12 +34,12 @@ h1 {
   width: 38%;
   /* margin: 30vh 5em 0em 18em; */
   flex: 1;
-  padding-right: 2%;
-  padding-left: 10%;
+  text-align: center;
+  align-items: center;
 }
 
 .contact_submit {
-  font-size: .9vw;
+  font-size: 20px;
   background-color: teal;
 }
 
@@ -59,23 +56,23 @@ h1 {
   flex-direction: column;
   background-color: white;
   flex: 1;
-  padding: 4vh;
-  width: 60%;
-  margin: 5% 5% 5% 0%;
+  padding: 15px;
+  width: 90%;
+  margin: 25px 50px 50px 50px;
 }
 
 
 .contact_item {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   /* font-size: 14px; */
-  font-size: .8vw;
+  font-size: 20px;
 }
 
 .contact_item textarea, .contact_item input {
   outline: none;
   border: none;
   border-bottom: solid 1px #ccc;
-  padding: 1.5vw;
+  padding: 1em;
   width: 100%;
 }
 
@@ -88,20 +85,20 @@ h1 {
 }
 
 .contact_item textarea {
-  height: 10em;
+  height: 4em;
 }
 
 .contact h2 {
   margin-bottom: 3vw;
-  font-size: 1.3vw;
+  font-size: 30px;
 }
 
 .contact p {
-  font-size: 1.1vw;
+  font-size: 20px;
 }
 
 .contact_logo {
-  width: 100%;
+  width: 500px;
   max-width: 30em;
   margin-bottom: 3vh;
   height: auto;
@@ -115,6 +112,57 @@ h1 {
   margin: 0.5em;
 }
 
+@media screen and (min-width:1510px) {
+.contact {
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-top: 50px;
+  /* padding: 100px 200px 150px 200px; */
+
+}
+
+.contact_left {
+  padding-right: 2%;
+  padding-left: 10%;
+  text-align: left;
+}
+
+.contact_right {
+  padding: 4vh;
+  width: 60%;
+  margin: 5% 5% 5% 0%;
+}
+
+.contact_item {
+  padding-bottom: 2em;
+}
+
+.contact_item textarea, .contact_item input {
+  padding: 1.5vw;
+}
+
+.contact_item input, .contact_item label {
+  display: block;
+}
+
+.contact_item textarea {
+  height: 7em;
+}
+
+.contact h2 {
+  margin-bottom: 3vw;
+  font-size: 30px;
+}
+
+.contact p {
+  font-size: 20px;
+}
+
+.contact_logo {
+  width: 100%;
+}
+
+}
 
 
 /* --------------- NAV ---------------- */
@@ -123,11 +171,10 @@ h1 {
   display: flex;
   flex-direction: row;
   width: 100vw;
-
   background-color: white;
-  font-size: 20px;
+  font-size: 22px;
   align-items: center;
-  margin-left: 0;
+  margin: 0;
   padding-left: 2em;
   position: fixed;
   z-index: 10000;
@@ -152,7 +199,7 @@ h1 {
 }
 
 .nav-item {
-  padding: .5em 1.2em;
+  padding: .8em 1.2em;
   color: black;
   position: relative; 
   display: inline-block;
@@ -254,7 +301,7 @@ li {
   position: fixed;
   z-index: 10000;
   box-shadow: 0px 8px 16px 0px rgba(214, 213, 213, 0.2);
-} 
+}
 
 .nav-home {
   display: flex;
