--- a/client/src/components/admin/homes/admin-homes-mob/HomesMob.css
+++ b/client/src/components/admin/homes/admin-homes-mob/HomesMob.css
@@ -2,15 +2,20 @@
   margin-top: 4em;
 }
 
-.home-section-cont {
+.home-section-cont-mob {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 2em 0em 5em 8em;
+  /* margin: 2em 0em 5em 8em; */
+  /* border: 2px red solid; */
+  width: 100%;
+  text-align:  center;
+  padding: 0 auto;
+  margin-bottom: 1.5em;
 }
 
-.form-homes {
+.form-homes-mob {
   padding: 1em;
   display: flex;
   width: 65%;
@@ -19,37 +24,32 @@
 
 }
 
-.homes-form-cont {
+.homes-form-cont-mob {
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  border: red solid 2px;
+  /* border: red solid 2px; */
+  /* margin-top: 1em; */
 }
 
-.homes-form {
+.homes-form-mob {
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
   width: 50%;
   
-  border: blue solid 2px;
+  /* border: blue solid 2px; */
 }
 
-.homes-title {
-  text-align: center;
-  background-color: #67385D;
-  color: white;
-  padding: 10px;
-}
-.homes-subtitle {
+.homes-title-mob {
   text-align: center;
   background-color: #3C7473;
   color: white;
   padding: 10px;
 }
 
-.add-button {
+.add-button-mob {
   margin: 3em;
   display: block;
   /* margin-left: auto;
@@ -58,26 +58,47 @@
   
 }
 
-.home-btn-flex {
+.back-btn-home-mob {
+  background-color: #3C7473;
+
+
+}
+
+.delete-btn {
+  border: 1px solid #863A2A;
+}
+
+.back-btn-home-mob:hover {
+  background-color: rgb(40, 78, 78);
+}
+
+
+.home-btn-flex-mob {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .home-box h3 {
   font-size: 16px;
 }
 
-.home-box {
+.home-box-mob {
   /* border: 2px solid black; */
-  width: 33%;
+  width: 100%;
   /* height: 16em; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: 1em 0em;
+
+  /* margin: 1em 5em 1em 1em ; */
   
-  padding: 20px;
+  /* padding-right: 2em; */
 }
 
-.single-stat-home {
-  width: 20em !important;
+.single-stat-home-mob {
+  width: 100% !important;
+  /* border: 2px red solid; */
+
 }
