--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 2em 0em 5em 8em;
+  margin: 2em 2em 5em 2em;
   }
 
   .employee-box {
@@ -15,6 +15,7 @@
     justify-content: center;
     /* margin: 1em 1em; */
     padding: 20px;
+    text-align: center;
   }
 
   .employee_photo {
@@ -50,12 +51,13 @@
   }
 
   
-  button.add-button {
+ .add-button {
     background-color: #3C7473;
     display: block;
+    border-radius: 5px;
   }
   
-  button.add-button:hover {
+  .add-button:hover {
     background-color: rgb(40, 78, 78);
   }
 
@@ -65,13 +67,16 @@
 
   .employee-buttons {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
+    width: 60%;
+    margin: 2em;
+    /* border: 1px red solid; */
   }
 
   .employee-edit-page {
-    padding: 10em 5em 5em 5em;
+    padding: 7em 0em 0em 0em;
   }
 
 
