--- a/client/src/components/admin/homes/Homes.css
+++ b/client/src/components/admin/homes/Homes.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 2em 0em 5em 8em;
+  margin: 2em 2em;
 }
 
 .form-homes {
@@ -24,7 +24,7 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  border: red solid 2px;
+  /* border: red solid 2px; */
 }
 
 .homes-form {
@@ -33,7 +33,7 @@
   /* justify-content: center; */
   width: 50%;
   
-  border: blue solid 2px;
+  /* border: blue solid 2px; */
 }
 
 .homes-title {
