--- a/client/src/components/admin/stats/AdminStats.css
+++ b/client/src/components/admin/stats/AdminStats.css
@@ -1,10 +1,10 @@
 .sa-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .sa-title {
-  padding-top: 50px;
+  padding-top: 30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -30,9 +30,10 @@
 .stat-data {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: nowrap;
-  width: 25em;
+  width: 100%;
+
   /* height: 100%; */
 }
 
@@ -40,6 +41,8 @@
   height: 100%;
   width: 33%;
   padding: 0em 0em 2em;
+  /* text-align: center; */
+  /* border: 1px solid red; */
 }
 
 .button-cont-sa {
