--- a/client/src/components/expeditions/Expeditions.css
+++ b/client/src/components/expeditions/Expeditions.css
@@ -69,7 +69,7 @@
 
 .exp-content h1 {
   font-size: 3.5em;
-  text-shadow: 1px 1px black;
+  text-shadow: 2px 2px 10px black;
 }
 
 .exp-content p {
