--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -166,6 +166,7 @@ h1 {
 
 
 /* --------------- NAV ---------------- */
+
 .main-nav {
   display:-webkit-flex;
   display: flex;
@@ -194,8 +195,10 @@ h1 {
   align-items: center;
   margin-right: 3%;
   width: 100vw;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
+  text-align: center;
+  line-height: 1.3;
 }
 
 .nav-item {
@@ -232,7 +235,8 @@ h1 {
 }
 
 .facebook-image {
-  width: 2em;
+  width: 40px;
+  vertical-align: inherit;
 }
 
 .dropdown {
@@ -282,7 +286,7 @@ li {
     padding-bottom: 50em;
   }
 
-@media screen and (min-width:1510px) {
+@media screen and (min-width: 1024px) {
 .hide-me {
   display: none;
 }
@@ -317,7 +321,7 @@ li {
   margin-right: 3%;
   width: 100vw;
   justify-content: flex-end;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .nav-item {
@@ -352,10 +356,6 @@ li {
 .logo-image {
   margin: 1em 0em 1em 0em;
   width: 600px;
-}
-
-.facebook-image {
-  width: 2em;
 }
 
 .dropdown {
@@ -398,11 +398,27 @@ li {
 
 li {
   cursor: pointer;
-  }
+}
 
   .souls-container {
     height: 100vh;
     padding-bottom: 50em;
+  }
+
+  @media screen and (max-width: 1550px) {
+    .main-nav {
+      font-size: 20px;
+    }
+  }
+
+  @media screen and (max-width: 1350px) {
+    .main-nav {
+      font-size: 15px;
+    }
+
+    .logo-image {
+      width: 500px;
+    }
   }
 
 }
