--- a/client/src/components/shared/navbar-mobile/NavStyles.css
+++ b/client/src/components/shared/navbar-mobile/NavStyles.css
@@ -1,7 +1,22 @@
 .menu-mob-icon {
   width: 35px;
   margin: 8px;
-  float: right;
+}
+
+.main-nav-mobile {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  z-index: 500;
+  width: 100vw;
+  height: 50px;
+  background-color: white;
+  justify-content: space-between;
+  box-shadow: 0px 0px 20px 0px rgba(214, 213, 213, 0.4);
+}
+
+.main-nav-mobile-item {
+  position: relative;
 }
 
 .genhu-icon {
@@ -43,7 +58,7 @@
     z-index: 5000;
 }
 
-.facebook {
+.facebook-mobile {
   background-color: teal;
   margin-left: auto;
   margin-right: auto;
